--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -376,7 +376,8 @@
       "description": "Wie kann ich die Ergebnisse verfolgen?",
       "button_intro": "Erstelle deinen",
       "button_text": "Bürgerbereich."
-    }
+    },
+    "title_binding_mode": "@@final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "no_proposal_card": {
     "title": {
@@ -407,7 +408,8 @@
   "special_final_card": {
     "title": "Vielen Dank für deine Stimmabgaben!",
     "subtitle": "Du kannst weiterhin an der Konsultation teilnehmen",
-    "cta_text": "Ich rufe die Konsultation auf"
+    "cta_text": "Ich rufe die Konsultation auf",
+    "title_binding_mode": "@@special_final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "proposal_submit": {
     "form": {
