--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -379,6 +379,7 @@
   },
   "final_card": {
     "title": "Merci d’avoir réagi aux propositions !",
+    "title_binding_mode": "Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !",
     "description": "Continuez à voter pour nous aider à identifier les priorités.",
     "link_text": "J'accède à la consultation",
     "continue": "Je continue à voter",
@@ -416,6 +417,7 @@
   },
   "special_final_card": {
     "title": "Merci pour vos votes !",
+    "title_binding_mode": "Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !",
     "subtitle": "Vous pouvez continuer à participer à la consultation",
     "cta_text": "J'accède à la consultation"
   },
