--- a/apps/front/i18n/hr.json
+++ b/apps/front/i18n/hr.json
@@ -381,7 +381,8 @@
       "description": "Kako pratiti tijek rezultata?",
       "button_intro": "Stvorite",
       "button_text": "prostor za građanina."
-    }
+    },
+    "title_binding_mode": "@@final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "no_proposal_card": {
     "title": {
@@ -412,7 +413,8 @@
   "special_final_card": {
     "title": "Hvala vam na glasovanju!",
     "subtitle": "Možete nastaviti sudjelovati u raspravi",
-    "cta_text": "Sudjelujem u raspravi"
+    "cta_text": "Sudjelujem u raspravi",
+    "title_binding_mode": "@@special_final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "demographics_card": {
     "disclaimer": "Vaše su informacije anonimne kako bi naši rezultati bili reprezentativni.",
