--- a/apps/front/i18n/hu.json
+++ b/apps/front/i18n/hu.json
@@ -376,7 +376,8 @@
       "description": "Hogyan lehet követni az eredményeket?",
       "button_intro": "Hozza létre",
       "button_text": "állampolgári felületét."
-    }
+    },
+    "title_binding_mode": "@@final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "no_proposal_card": {
     "title": {
@@ -407,7 +408,8 @@
   "special_final_card": {
     "title": "Köszönjük a szavazatokat!",
     "subtitle": "Továbbra is részt vehet a konzultációban",
-    "cta_text": "Hozzáférés a konzultációhoz"
+    "cta_text": "Hozzáférés a konzultációhoz",
+    "title_binding_mode": "@@special_final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "demographics_card": {
     "disclaimer": "Adatai névtelenek, és lehetővé teszik, hogy eredményeink reprezentatívak legyenek.",
