--- a/apps/front/i18n/sv.json
+++ b/apps/front/i18n/sv.json
@@ -376,7 +376,8 @@
       "description": "Hur kan jag följa resultaten?",
       "button_intro": "Skapa din",
       "button_text": "medborgarplattform."
-    }
+    },
+    "title_binding_mode": "@@final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "no_proposal_card": {
     "title": {
@@ -407,7 +408,8 @@
   "special_final_card": {
     "title": "Tack för att du har röstat!",
     "subtitle": "Du kan fortsätta att delta i samrådet",
-    "cta_text": "Jag deltar i samrådet"
+    "cta_text": "Jag deltar i samrådet",
+    "title_binding_mode": "@@special_final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "demographics_card": {
     "disclaimer": "Dina uppgifter är anonyma och gör våra resultat representativa.",
