--- a/apps/widget/i18n/et.json
+++ b/apps/widget/i18n/et.json
@@ -170,7 +170,8 @@
       "description": "Kuidas tulemusi jälgida?",
       "button_intro": "Looge oma",
       "button_text": "kodanikukeskkond."
-    }
+    },
+    "title_binding_mode": "@@final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "no_proposal_card": {
     "title": {
@@ -201,7 +202,8 @@
   "special_final_card": {
     "title": "Täname hääletamise eest!",
     "subtitle": "Kuidas tulemusi jälgida?",
-    "cta_text": "Sisenen konsultatsiooni"
+    "cta_text": "Sisenen konsultatsiooni",
+    "title_binding_mode": "@@special_final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "demographics_card": {
     "disclaimer": "Teie andmed on anonüümsed ja võimaldavad meie tulemustel olla esindavad.",
