--- a/apps/widget/i18n/fi.json
+++ b/apps/widget/i18n/fi.json
@@ -151,7 +151,8 @@
       "description": "Miten voin seurata tuloksia?",
       "button_intro": "Luo oma",
       "button_text": "kansalaisalue."
-    }
+    },
+    "title_binding_mode": "@@final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "no_proposal_card": {
     "title": {
@@ -182,7 +183,8 @@
   "special_final_card": {
     "title": "Kiitos äänistäsi!",
     "subtitle": "Voit jatkaa kuulemiseen osallistumista",
-    "cta_text": "Siirry kuulemiseen"
+    "cta_text": "Siirry kuulemiseen",
+    "title_binding_mode": "@@special_final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "demographics_card": {
     "disclaimer": "Tietosi ovat nimettömiä, ja niiden avulla voimme varmistaa, että tulokset ovat kattavia.",
