--- a/apps/widget/i18n/lv.json
+++ b/apps/widget/i18n/lv.json
@@ -170,7 +170,8 @@
       "description": "Kā sekot rezultātiem?",
       "button_intro": "Izveidojiet savu",
       "button_text": "iedzīvotāja telpu."
-    }
+    },
+    "title_binding_mode": "@@final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "no_proposal_card": {
     "title": {
@@ -201,7 +202,8 @@
   "special_final_card": {
     "title": "Paldies par jūsu balsojumu!",
     "subtitle": "Jūs joprojām varat piedalīties apspriešanā",
-    "cta_text": "Es piekļūstu apspriešanai"
+    "cta_text": "Es piekļūstu apspriešanai",
+    "title_binding_mode": "@@special_final_card.title_binding_mode|fr:Merci d’avoir réagi aux propositions et d’avoir partagé quelques informations avec nous !"
   },
   "demographics_card": {
     "disclaimer": "Jūsu sniegtā informācija ir anonīma un ļauj mūsu rezultātiem būt reprezentatīviem.",
