feat(global): mister p typo fix
closes: MP-3406

--- a/apps/widget/i18n/bg.json
+++ b/apps/widget/i18n/bg.json
@@ -358,7 +358,7 @@
     "link": "Открийте нашата дейност"
   },
   "demographics_intro": {
-    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soient bien pris en compte et pour garantir une meilleure représentativité.",
     "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
     "next": "@@demographics_intro.next|fr:Suivant"
   }
