--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -373,7 +373,7 @@
     "partnership": "en partenariat avec"
   },
   "demographics_intro": {
-    "title": "Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "title": "Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soient bien pris en compte et pour garantir une meilleure représentativité.",
     "protect": "Pas d’inquiétude vos données sont protégées 🔒",
     "next": "Suivant"
   },
