--- a/apps/front/i18n/pl.json
+++ b/apps/front/i18n/pl.json
@@ -1469,7 +1469,7 @@
     }
   },
   "demographics_intro": {
-    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soient bien pris en compte et pour garantir une meilleure représentativité.",
     "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
     "next": "@@demographics_intro.next|fr:Suivant"
   }
