--- a/apps/widget/i18n/fr.json
+++ b/apps/widget/i18n/fr.json
@@ -162,7 +162,7 @@
     "button": "Démarrer"
   },
   "demographics_intro": {
-    "title": "Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "title": "Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soient bien pris en compte et pour garantir une meilleure représentativité.",
     "protect": "Pas d’inquiétude vos données sont protégées 🔒",
     "next": "Suivant"
   },
