--- a/apps/widget/i18n/pl.json
+++ b/apps/widget/i18n/pl.json
@@ -361,7 +361,7 @@
     "link": "Odkryj naszą działalność"
   },
   "demographics_intro": {
-    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soient bien pris en compte et pour garantir une meilleure représentativité.",
     "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
     "next": "@@demographics_intro.next|fr:Suivant"
   }
