feat(global): added onboarding modal
closes: MP-3539

--- a/apps/assembly/i18n/fr.json
+++ b/apps/assembly/i18n/fr.json
@@ -20,6 +20,10 @@
     "name": "cese",
     "fullName": "Convention citoyenne cese"
   },
+  "modal": {
+    "closeLabel": "Fermer la fenêtre de dialogue",
+    "discover": "Découvrir"
+  },
   "theme": "La Convention citoyenne par thématique :",
   "themes": [
     "Soins palliatifs",
