feat(global): added header and blocks
closes: MP-3541

--- a/apps/assembly/i18n/fr.json
+++ b/apps/assembly/i18n/fr.json
@@ -11,6 +11,10 @@
     "load": "Charger",
     "opinions": "Les avis des intervenants"
   },
+  "header": {
+    "beta": "beta",
+    "make": "Propulsé par Make.org"
+  },
   "ressources": {
     "vidsButton": "Ressources vidéos",
     "docsButton": "Ressources documentaires",
