feat(assembly): added transcript sources style and revised some styles
closes: MP-3564

--- a/apps/assembly/i18n/fr.json
+++ b/apps/assembly/i18n/fr.json
@@ -61,6 +61,9 @@
     "disabled": "Bouton désactivé",
     "request_send": "Envoyer une requête"
   },
+  "feed": {
+    "sources": "Voici mes sources :"
+  },
   "sidebar": {
     "explore": "Explorer",
     "exp": "Une expérience imaginée par",
