feat(assembly): document sources, updated types and style fixes
closes: MP-3565

--- a/apps/assembly/i18n/fr.json
+++ b/apps/assembly/i18n/fr.json
@@ -54,6 +54,7 @@
     "submit": "Envoyer",
     "caution": "MarIA.ne peut afficher des informations inexactes ou offensantes qui ne représentent pas les opinions du CESE. Charte Éthique IA Make.org",
     "themeAnswer": "Voici les thématiques de la convention :",
+    "warning": "Cette intelligence artificielle peut faire des erreurs. N’hésitez pas à vérifier les informations importantes.",
     "me": "Moi",
     "themes": "Thématiques",
     "themesDiscover": "Découvrir l’ensemble des thématiques",
