feat(assembly): hyperlink buttons llm and updates state for handling
closes: MP-3609

--- a/apps/assembly/i18n/fr.json
+++ b/apps/assembly/i18n/fr.json
@@ -63,7 +63,10 @@
     "request_send": "Envoyer une requête"
   },
   "feed": {
-    "sources": "Voici mes sources :"
+    "sources": "Voici mes sources :",
+    "hyperlinks_title": "Pour compléter ses connaissances :",
+    "detailed_response": "Accéder à la réponse détaillée",
+    "document_sources": "Accéder à la réponse provenant des documents certifiés"
   },
   "sidebar": {
     "explore": "Explorer",
