feat(assembly-ui): add cookie banner and modal

--- a/apps/assembly-ui/i18n/fr.json
+++ b/apps/assembly-ui/i18n/fr.json
@@ -99,5 +99,9 @@
     "not_found": "404",
     "no_page": "Nous ne parvenons pas à trouver la page que vous cherchez.",
     "back": "Revenir en arrière"
+  },
+  "cookies": {
+    "youtube": "Youtube est désactivé",
+    "update_action": "Modifier mes choix"
   }
 }
