feat(assembly-ui): header scroll top
closes: MP-3627

--- a/apps/assembly-ui/i18n/fr.json
+++ b/apps/assembly-ui/i18n/fr.json
@@ -16,7 +16,8 @@
   },
   "header": {
     "beta": "beta",
-    "make": "Propulsé par Make.org"
+    "make": "Propulsé par Make.org",
+    "top": "Aller en haut de la page"
   },
   "ressources": {
     "vidsButton": "Ressources vidéos",
