fix(assembly-ui): update functional cookie consent for youtube

--- a/apps/assembly-ui/i18n/fr.json
+++ b/apps/assembly-ui/i18n/fr.json
@@ -101,7 +101,7 @@
     "back": "Revenir en arrière"
   },
   "cookies": {
-    "youtube": "Youtube est désactivé",
-    "update_action": "Modifier mes choix"
+    "functional": "Afin de visionner la vidéo, veuillez accepter les cookies fonctionnels.",
+    "accept_functional": "Accepter les cookies fonctionnels"
   }
 }
