feat(assembly-ui): handle llm errors messages
closes: MP-3677

--- a/apps/assembly-ui/i18n/fr.json
+++ b/apps/assembly-ui/i18n/fr.json
@@ -63,7 +63,8 @@
     "themesDiscover": "Découvrir l’ensemble des thématiques",
     "cancel": "Annuler",
     "disabled": "Bouton désactivé",
-    "request_send": "Poser une question à l’IA"
+    "request_send": "Poser une question à l’IA",
+    "error": "Je ne suis pas en mesure de répondre à cette question. Recherchons autre chose !"
   },
   "feed": {
     "sources": "Cette réponse est sourcée à partir des éléments suivants",
